<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="@color/white"
    android:orientation="vertical">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        android:text="@string/deseja_jogar_novamente"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow>

                <Button
                    android:id="@+id/buttonSim"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/black"
                    android:text="@string/sim"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <Button
                    android:id="@+id/buttonNao"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/black"
                    android:layout_marginStart="10dp"
                    android:text="@string/nao"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
            </TableRow>

        </TableLayout>

    </LinearLayout>


</LinearLayout>